--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</section>
 
 	<section class="desc">
-		<div class="container -flex">
+		<div class="container -flex -desc">
 			<div class="desc__left">
 				<div class="session">
 					<div class="time">
